# matera-api

./: README.md  docker-compose.yml  pyproject.toml
 .github/workflows/: ci.yml
.docker/: .dockerignore  Dockerfile  docker-compose.yml  entrypoint.sh
.github/workflows/: ci.yml
accounts/: admin.py  managers.py  models.py  serializers.py  services.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_user_managers.py  0003_historicaluser.py
accounts/tests/: test_accounts_models.py  test_use_cases_account_me.py  test_views_account_me.py  test_views_register_account.py  tests_me.py
accounts/usescases/: get_account_use_case.py
audits/: admin.py
audits/enums/: __init__.py  loan_audit_enum.py
audits/migrations/: 0001_initial.py
audits/models/: __init__.py  loan_audit_model.py
audits/services/: __init__.py  loan_audit_logger.py
audits/tests/: test_loand_audit_models.py
core/: pagination.py  settings.py  urls.py
loans/: admin.py  models.py  serializers.py  urls.py  views.py
loans/management/commands/: seed.py
loans/migrations/: 0001_initial.py  0002_alter_loan_requested_date.py  0002_historicalloan.py  0002_loan_is_fully_paid.py
loans/tests/: test_loans_models.py  test_loans_view.py
payments/: admin.py  models.py  serializers.py  urls.py  views.py
payments/migrations/: 0001_initial.py  0002_historicalpayment.py
payments/tests/: test_payments.py  test_payments_model.py  test_process_payment_use_case.py
payments/usecases/: __init__.py  process_payment_use_case.py
