[project]
name = "matera-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Pedro Fonseca",email = "contatopedrorn@gmail.com"}
]
package-mode = false
readme = "README.md"
requires-python = ">=3.13"


dependencies = [
    "django (>=5.2,<6.0)",
    "django-cors-headers (>=4.7.0,<5.0.0)",
    "django-filter (>=25.1,<26.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "djangorestframework (>=3.16.0,<4.0.0)",
    "djangorestframework-simplejwt (>=5.5.0,<6.0.0)",
    "drf-spectacular (>=0.28.0,<0.29.0)",
    "django-extensions (>=4.1,<5.0)"
]

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
ruff = "^0.3.5"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
